[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/UI/ItemDisplay.gd" type="Script" id=1]
[ext_resource path="res://Icons/ItemIconBackground.png" type="Texture" id=2]
[ext_resource path="res://Themes/20Theme.tres" type="Theme" id=3]
[ext_resource path="res://Themes/35Theme.tres" type="Theme" id=4]
[ext_resource path="res://Scenes/Buttons/Menu_Button_Tempate.tscn" type="PackedScene" id=7]

[node name="ItemDisplay" type="HBoxContainer"]
margin_right = 440.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 70 )
size_flags_horizontal = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemBackground" type="TextureRect" parent="."]
margin_right = 100.0
margin_bottom = 100.0
texture = ExtResource( 2 )

[node name="ItemButton" type="TextureButton" parent="ItemBackground"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ItemBackground/ItemButton"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -65.0
margin_top = -34.0
margin_bottom = 1.0
rect_min_size = Vector2( 65, 35 )
theme = ExtResource( 3 )
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemNumber" type="Label" parent="."]
visible = false
margin_left = 104.0
margin_right = 104.0
margin_bottom = 34.0
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource( 3 )

[node name="ItemName" type="Label" parent="."]
margin_left = 104.0
margin_right = 128.0
margin_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 4 )
valign = 1

[node name="Drop" parent="." instance=ExtResource( 7 )]
margin_left = 132.0
margin_right = 232.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 50 )

[node name="Equip" parent="." instance=ExtResource( 7 )]
margin_left = 236.0
margin_right = 336.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 50 )

[node name="Use Item" parent="." instance=ExtResource( 7 )]
margin_left = 340.0
margin_right = 440.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 50 )
[connection signal="button_down" from="ItemBackground/ItemButton" to="." method="_on_ItemButton_button_down"]
[connection signal="button_up" from="ItemBackground/ItemButton" to="." method="_on_ItemButton_button_up"]
